2007-04-22  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-doc-utils branched for 2.18.

2007-04-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added gnome-scan module in extras.

2007-04-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: devhelp and evince branched for 2.18.

2007-04-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: 
	* releases.xml.in: gconf branched for 2.18.
	brasero_0_6 branch also added to releases.xml.in.
	Corrected Changelog date for Djihed.

2007-04-16  Djihed Afifi  <djihed@gmail.com>

	* gnome-modules.xml.in: Added brasero_0_6 branch for Brasero 

2007-04-15  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Added lsr to proposed modules. Branched sabayon in 
	2.16.

2007-04-10  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Created new GNOME 2.20 release.

2007-04-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-themes and vino for 2.18.
	Corrected link for gnome-desktop lgpl, fixes bug #427840.

2007-04-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-system-monitor for 2.18.

2007-04-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-keyring, libgnome, lignomeui,
	libgnomeprint for 2.18.

2007-03-31  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched file-roller for 2.18.

2007-03-31  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added a bunch of new modules in extras.
	Fixes bug #424811.

2007-03-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module accerciser in extras.
	Added gthumb-2-10 branch. 

2007-03-27  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: