@@ -770,9 +770,10 @@
     <branch id="HEAD"/>
   </module>
   <module id="gnome-screensaver">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnome-session">
     <maintainer id="vuntz"/>
@@ -908,7 +909,8 @@
     <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnome-volume-manager">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnopernicus">
     <branch id="HEAD" stringfrozen="true"/>
@@ -1140,9 +1142,10 @@
     <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="nautilus-cd-burner">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="nautilus-actions">
     <branch id="HEAD"/>
