@@ -1,3 +1,10 @@
+2007-04-23  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: gnome-volume-manager, nautilus-cd-burner,
+	gnome-screensaver branched for 2.18.
+	gnome-devel-docs added to proposed modules for 2.20.
+
 2007-04-22  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
